--- a/InspectionReportWebApp.csproj
+++ b/InspectionReportWebApp.csproj
@@ -27,7 +27,7 @@
     <Reference Include="System.Windows.Forms"><Aliases>swf</Aliases></Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Compile Remove="Startup.cs" />
-    <Content Include="Startup.cs"/>
+    <Content Include="Startup.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -58,8 +58,24 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net" Version="0.1.0" />
     <PackageReference Include="Wisej-3" Version="3.1.*" />
     <PackageReference Include="System.Data.SqlClient" Version="4.*" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 
