--- a/InspectionReportWebApp.csproj
+++ b/InspectionReportWebApp.csproj
@@ -59,6 +59,8 @@
   
   <ItemGroup>
     <PackageReference Include="BCrypt.Net" Version="0.1.0" />
+    <PackageReference Include="EPPlus" Version="6.2.10" />
+    <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="Wisej-3" Version="3.1.*" />
     <PackageReference Include="System.Data.SqlClient" Version="4.*" />
   </ItemGroup>
