--- a/InspectionReportWebApp.csproj
+++ b/InspectionReportWebApp.csproj
@@ -31,6 +31,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="ECNC\" />
     <Folder Include="Themes\" />
   </ItemGroup>
 
@@ -68,6 +69,9 @@
   </ItemGroup>
   
   <ItemGroup>
+    <Compile Update="HomePageRegularUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Update="InspectionReportDataSet.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
